--- a/Client/Views/EntranceWindow.xaml
+++ b/Client/Views/EntranceWindow.xaml
@@ -67,11 +67,9 @@
                 </Style.Triggers>
             </Style>
 
-            <Style x:Key="ButtonSignInStyle" TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
+            <Style x:Key="ButtonSignInStyle" TargetType="Button" BasedOn="{StaticResource ButtonStyle}">
                 <Setter Property="Visibility" Value="Visible"/>
                 <Setter Property="IsEnabled" Value="False"/>
-                <Setter Property="Background" Value="{StaticResource ButtonBackground}"/>
-                <Setter Property="Foreground" Value="White"/>
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding Path=DataContext.IsSectionShown, RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=Window}}" Value="false">
                         <Setter Property="Visibility" Value="Visible" />
@@ -97,10 +95,8 @@
                 </Style.Triggers>
             </Style>
 
-            <Style x:Key="ButtonRegistrateStyle" TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
+            <Style x:Key="ButtonRegistrateStyle" TargetType="Button" BasedOn="{StaticResource ButtonStyle}">
                 <Setter Property="Grid.Column" Value="1"/>
-                <Setter Property="Background" Value="{StaticResource ButtonBackground}"/>
-                <Setter Property="Foreground" Value="White"/>
                 <Style.Triggers>
                     <DataTrigger Binding="{Binding Path=DataContext.IsSectionShown, RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=Window}}" Value="false">
                         <Setter Property="Grid.Column" Value="1" />
@@ -129,12 +125,6 @@
                         </MultiDataTrigger.Setters>
                     </MultiDataTrigger>
                 </Style.Triggers>
-            </Style>
-
-            <Style x:Key="BackButtonStyle" TargetType="Button">
-                <Setter Property="Background" Value="{StaticResource ButtonBackground}"/>
-                <Setter Property="Foreground" Value="White"/>
-                <Setter Property="Margin" Value="10, 50, 10, 100"/>
             </Style>
 
             <DataTemplate x:Key="PhotoButtonDataTemplate">
@@ -200,7 +190,7 @@
             </Button.Background>
         </Button>
 
-        <Button Content="Back" Grid.Row="3" Grid.Column="1" Style="{StaticResource BackButtonStyle}" Command="{Binding BackCommand}"/>
+        <Button Content="Back" Grid.Row="3" Grid.Column="1" Margin="10, 50, 10, 100" Style="{StaticResource ButtonStyle}" Command="{Binding BackCommand}"/>
 
         <uc:LoadingUserControl Grid.RowSpan="4" Grid.ColumnSpan="2" State="{Binding Path=LoaderState}"  Visibility="{Binding Path=LoaderVisibility}"/>
 
