--- a/Client/WindowResources/ButtonEllipseStyle.xaml
+++ b/Client/WindowResources/ButtonEllipseStyle.xaml
@@ -1,13 +1,44 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:Icons="http://metro.mahapps.com/winfx/xaml/iconpacks">
+                    xmlns:icons="http://metro.mahapps.com/winfx/xaml/iconpacks">
+    
+    <ControlTemplate x:Key="ButtonLoaderTemplate" TargetType="Button">
+        <Border Background="Transparent">
+            <icons:PackIconMaterial x:Name="icon" Opacity="0" Width="50" Height="50" Kind="RefreshCircle" Foreground="Yellow" RenderTransformOrigin="0.5,0.5">
+                <icons:PackIconMaterial.RenderTransform>
+                    <TransformGroup>
+                        <RotateTransform x:Name="rotationIcon" Angle="0"/>
+                    </TransformGroup>
+                </icons:PackIconMaterial.RenderTransform>
+            </icons:PackIconMaterial>
+        </Border>
 
-    <Style x:Key="ButtonEllipseStyle" TargetType="{x:Type Button}">
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsMouseOver" Value="true">
+                <Setter TargetName="icon" Property="Opacity" Value="100"/>
+                <Trigger.EnterActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetName="rotationIcon" Storyboard.TargetProperty="Angle" From="0" To="360" Duration="0:0:1" RepeatBehavior="Forever"/>
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.EnterActions>
+                <Trigger.ExitActions>
+                    <BeginStoryboard>
+                        <Storyboard>
+                            <DoubleAnimation Storyboard.TargetName="rotationIcon" Storyboard.TargetProperty="Angle" />
+                        </Storyboard>
+                    </BeginStoryboard>
+                </Trigger.ExitActions>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+    
+    <!--<Style x:Key="ButtonEllipseStyle" TargetType="{x:Type Button}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-
-                    <Grid>
+                    <Grid Width="60" Height="60">
                         <Rectangle RadiusX="20" RadiusY="20" Fill="#FFF0F0F0"/>
                         <Border CornerRadius="20" BorderThickness="1" BorderBrush="Gray">
 
@@ -53,6 +84,6 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>
+    </Style>-->
 
 </ResourceDictionary>
