--- a/Client/WindowResources/ChatsDictionary.xaml
+++ b/Client/WindowResources/ChatsDictionary.xaml
@@ -61,14 +61,14 @@
         </DataTemplate.Triggers>-->
     </DataTemplate>
 
-    <!--<DataTemplate x:Key="ChatDataTemplate">
+    <DataTemplate x:Key="ChatDataTemplate">
         <uc:ChatItem
             UserName="{Binding Path=Name}"
             Description="{Binding Path=bbb}"
             Avatar="{Binding Path=Image}"
             IsOnlineVisibility="Hidden">
         </uc:ChatItem>
-    </DataTemplate>-->
+    </DataTemplate>
 
     <DataTemplate x:Key="ChatGroupDataTemplate">
         <uc:ChatItem
